@@ -23,7 +23,7 @@ Type 'q()' to quit R.
 > options(warn = 1)
 > library('vegan')
 Loading required package: permute
-This is vegan 2.1-2
+This is vegan 2.1-3
 > 
 > assign(".oldSearch", search(), pos = 'CheckExEnv')
 > cleanEx()
@@ -161,7 +161,7 @@ Link function: identity
 
 Formula:
 y ~ poly(x1, 1) + poly(x2, 1)
-<environment: 0x102616318>
+<environment: 0x101f4a668>
 Total model degrees of freedom 3 
 
 GCV score: 0.0427924
@@ -4748,7 +4748,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x1076efd50>
+<environment: 0x107369758>
 
 Estimated degrees of freedom:
 6.4351  total = 7.435071 
@@ -4764,7 +4764,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x107d2c520>
+<environment: 0x107373118>
 
 Estimated degrees of freedom:
 6.1039  total = 7.103853 
@@ -4920,7 +4920,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x1071b6878>
+<environment: 0x106e7fd88>
 
 Estimated degrees of freedom:
 8.9275  total = 9.927492 
@@ -4933,7 +4933,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x107335828>
+<environment: 0x1075d88e0>
 
 Estimated degrees of freedom:
 7.7529  total = 8.75294 
@@ -4946,7 +4946,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x107559a78>
+<environment: 0x104c35a78>
 
 Estimated degrees of freedom:
 8.8962  total = 9.89616 
@@ -6038,6 +6038,13 @@ Eigenvalues for unconstrained axes:
 > ## An impression of confidence regions of site scores
 > plot(mod, display="sites")
 > for (i in 1:5) lines(procrustes(mod, update(mod, simulate(mod) ~ .)), col="blue")
+> ## Simulate a set of null communities with permutation of residuals
+> simulate(mod, indx = shuffleSet(nrow(dune), 99))
+An object of class “simulate.rda” 
+‘simulate index’ method (abundance, non-sequential)
+20 x 30 matrix
+Number of permuted matrices = 99 
+
 > 
 > 
 > 
@@ -7208,7 +7215,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x107b75200>
+<environment: 0x1051f2b18>
 
 Estimated degrees of freedom:
 2  total = 3 
@@ -7684,7 +7691,7 @@ Procrustes sum of squares:
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  101.036 1.382 104.093 0 0 
+Time elapsed:  104.669 1.275 107.14 0 0 
 > grDevices::dev.off()
 null device 
           1 
